# osprey_dev

./: README.md
6809/: README.md  bmalloc.s  build.sh  dump  dyno  fat.s  globals.s  gui.s  int.s  mbr.s  rom  rom.s  sdcard.s  test_in_emu.sh  wozmon_rom.s
kicad/: logicshift.kicad_sch  meme.kicad_sch  osprey68.kicad_pcb  osprey68.kicad_prl  osprey68.kicad_pro  osprey68.kicad_sch  untitled.kicad_sch  ~osprey68.kicad_sch.lck
kicad/jlcpcb/: project.db
kicad/jlcpcb/gerber/: osprey68-CuBottom.gbr  osprey68-CuTop.gbr  osprey68-EdgeCuts.gbr  osprey68-MaskBottom.gbr  osprey68-MaskTop.gbr  osprey68-NPTH.drl  osprey68-PTH.drl  osprey68-SilkBottom.gbr  osprey68-SilkTop.gbr
kicad/jlcpcb/production_files/: BOM-osprey68.csv  CPL-osprey68.csv
osprey_emu/: CMakeLists.txt  cmake_install.cmake  main.cpp  meson.build  osprey_emu.cbp  osprey_emu.depend  osprey_emu.layout  test.c  test.elf  test.hex
osprey_emu/include/: CPU6809.h  CPUAtmega16.h  ILI9488.h  PS2Keyboard.h  VIA6522.h  atmega16a.h
osprey_emu/src/: CPU6809.cpp  CPUAtmega16.cpp  ILI9488.cpp  PS2Keyboard.cpp  VIA6522.cpp
pal/: ospreypal.chp  ospreypal.fus  ospreypal.jed  ospreypal.pin  ospreypal.pld
sio/: a.out  conf.h  dump  flash.sh  fuses.conf  ili9488.h  makefile  osprey_font.h  osprey_font.xbm  ps2.c  ps2.h  ps2_keymap_en.h  serial.c  test.c
